feat: probably final proof of concept